fix: fix add address z-index

--- a/src/ui/views/Dashboard/style.less
+++ b/src/ui/views/Dashboard/style.less
@@ -490,6 +490,7 @@
       border-top: 1px solid #e5e9ef;
       padding-left: 15px;
       color: #8697ff;
+      z-index: 10;
       &:hover {
         background-color: rgba(134, 151, 255, 0.1);
       }
